--- a/Python/Assignments/Minor Assignment 7/assignment7_end.ipynb
+++ b/Python/Assignments/Minor Assignment 7/assignment7_end.ipynb
@@ -290,7 +290,18 @@
    "execution_count": null,
    "id": "58b3b010-3a5d-441c-ba4f-c347248cd6dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'c:\\Users\\hp\\AppData\\Local\\Programs\\Python\\Python311\\python.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/hp/AppData/Local/Programs/Python/Python311/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "quote = \"The quick brown fox jumps over the lazy dog\"\n",
     "\n",
